Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27666

User variable not parsed as geometry variable in geometry function

    XMLWordPrintable

Details

    Description

      Repeatable with

      set @g=  point(1, 1); 
      select ST_AsWKT(GeometryCollection(Point(44, 6), @g));
       
      ERROR 1367 (22007) at line 1: Illegal non geometric '@`g`' value found during parsing
      

      The same bug exists in MySQL 8.0 with slightly different error message (note braces).

      ERROR 1367 (22007) at line 1: Illegal non geometric '(@`g`)' value found during parsing
      

      Attachments

        1. mariadb-bin-10.5.24-geom-user-var.000001
          0.7 kB
          Alexander Barkov
        2. 10.4-test.diff
          4 kB
          Alexander Barkov

        Issue Links

          Activity

            People

              bar Alexander Barkov
              anel Anel Husakovic
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.