MDEV-27666 User variable not parsed as geometry variable in geometry function.