sql/sql_binlog.cc
@@ -134,7 +134,8 @@ int binlog_defragment(THD *thd)
     entry[k]=
       (user_var_entry*) my_hash_search(&thd->user_vars, (uchar*) name[k].str,
                                        name[k].length);
-    if (!entry[k] || entry[k]->type != STRING_RESULT)
+    if (!entry[k] ||
+        (entry[k]->type != VAR_STRING && entry[k]->type != VAR_GEOMETRY))
     {
       my_error(ER_WRONG_TYPE_FOR_VAR, MYF(0), name[k].str);
       return -1;
@@ -159,7 +160,7 @@ int binlog_defragment(THD *thd)
     gathered_length += entry[k]->length;
   }
   for (uint k=0; k < 2; k++)
-    update_hash(entry[k], true, NULL, 0, STRING_RESULT, &my_charset_bin, 0);
+    update_hash(entry[k], true, NULL, 0, VAR_STRING, &my_charset_bin, 0);
 
   DBUG_ASSERT(gathered_length == thd->lex->comment.length);
 
