sql/wsrep_var.h
@@ -26,9 +26,9 @@
 
 // MySQL variables funcs
 
-#include "sql_priv.h"
 #include <sql_plugin.h>
 #include <mysql/plugin.h>
+#include "sql_priv.h"
 
 class sys_var;
 class set_var;
